--- a/1_docker_terraform/compose.yaml
+++ b/1_docker_terraform/compose.yaml
@@ -1,4 +1,5 @@
 services:
+# Na interface do pgadmin o hostname é o nome do serviço no caso pgdatabase  
   pgdatabase:
     image: postgres:13
     environment:
